--- a/projectrqg/styles.css
+++ b/projectrqg/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Arial', sans-serif;
     background-color: #282c34;
-    color: white;
+    color: rgb(23, 23, 23);
     margin: 0;
 }
 
@@ -13,10 +13,26 @@ header {
 
 .container {
     text-align: center;
-    max-width: 600px;
+    width: 1200px;
+    height: 900px;
     margin: 0 auto;
+    color: #61dafb;
+    background-color: #282c34;
+    margin-top: 100px;
+}
+.title{
+    color: rgb(253, 165, 3);
+    position: relative;
+    top: 100px;
+    font-size: 50px;
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+.container_1{
+position: relative;
+top: 30%;
+}
 #quote-container {
     position: relative;
     overflow: hidden;
@@ -31,26 +47,29 @@ header {
 }
 
 #quote {
-    font-size: 24px;
+    font-size: 45px;
     margin-bottom: 10px;
+    font-family: poppins;
 }
 
 #author {
-    font-size: 18px;
+    font-size: 24px;
 }
 
 .button-container {
     display: flex;
-    flex-direction: column;
     gap: 10px;
+    justify-content: center;
+    position: relative;
+    top: 30px;
 }
 
 button, #tweet-btn {
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 26px;
     cursor: pointer;
     border: none;
-    border-radius: 4px;
+    border-radius: 30px;
 }
 
 button {
